--- a/staging-release.json
+++ b/staging-release.json
@@ -3,7 +3,6 @@
     "latestVersionCode": "3",
     "url": "https://github.com/CloudChef-Inc/android-release/releases/download/v1.0.2-3-staging/CloudChef.apk",
     "releaseNotes": [
-      "- Fix cook steps error",
-      "- Added updated ui"
+      "- Fix barcode functionality"
     ]
 }
