--- a/staging-release.json
+++ b/staging-release.json
@@ -3,7 +3,6 @@
     "latestVersionCode": "17",
     "url": "https://github.com/CloudChef-Inc/android-release/releases/download/v1.4.1-17-staging/CloudChef.apk",
     "releaseNotes": [
-      "- Fix cook steps error",
-      "- Added updated ui"
+      "- Testing installation parse error fix",
     ]
 }
