--- a/staging-release.json
+++ b/staging-release.json
@@ -1,7 +1,7 @@
 {
   "latestVersion": "1.4.6",
   "latestVersionCode": "35",
-  "url": "https://github.com/CloudChef-Inc/android-release/releases/download/v1.2.6-35/CloudChef.apk",
+  "url": "https://github.com/CloudChef-Inc/android-release/releases/download/v1.4.1-17-staging/CloudChef.apk",
   "releaseNotes": [
     "Re-enable barcode functionality on recording menu"
   ]
